[package]
name = "tearup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tearup_macro = { path = "../tearup_macro" }
trybuild = "1.0.64"
macrotest = "1.0.9"
async-trait = "0.1.57"
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["rt", "macros", "time"] }
