[package]
name = "tearup"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Adrien Olivon <mail@markus-kohlhase.de>"]
description = "Setup - teardown your tests"
homepage = "https://github.com/Greedeuh/tearup"
repository = "https://github.com/Greedeuh/tearup"
readme = "../README.md"
keywords = ["test", "setup", "teardown"]
categories = ["development-tools::testing"]

[dependencies]
tearup_macro = { path = '../tearup_macro' }
trybuild = "1.0.64"
macrotest = "1.0.9"
async-trait = "0.1.57"
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["rt", "macros", "time"] }
