[package]
name = "tearup"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Adrien Olivon <mail@markus-kohlhase.de>"]
description = "Setup - teardown your tests"
homepage = "https://github.com/Greedeuh/tearup"
repository = "https://github.com/Greedeuh/tearup"
readme = "../README.md"
keywords = ["test", "setup", "teardown"]
categories = ["development-tools::testing"]

[features]
async = ["dep:async-trait", "dep:futures", "dep:tokio", "tearup_macro/async"]
default = ["async"]

[dependencies]
tearup_macro = { path = "../tearup_macro"}
async-trait = { version = "0.1.57", optional = true }
futures = { version = "0.3.23", optional = true }
tokio = { version = "1.20.1", features = ["rt", "macros", "time"], optional = true }
stopwatch = "0.0.7"
anymap = "1.0.0-beta.2"

[dev-dependencies]
macrotest = "1.0.9"
lazy_static = "1.4.0"