[package]
name = "tearup_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"

[dev-dependencies]
tearup = { path = "../tearup" }
async-trait = "0.1.57"
tokio = { version = "1.20.1", features = ["rt", "macros"] }
lazy_static = "1.4.0"
reqwest = "0.11.11"