[package]
name = "tearup_macro"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Adrien Olivon <mail@markus-kohlhase.de>"]
description = "Setup - teardown your tests"
homepage = "https://github.com/Greedeuh/tearup"
repository = "https://github.com/Greedeuh/tearup"
readme = "../README.md"
keywords = ["test", "setup", "teardown"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[features]
async = []

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.43"

[dev-dependencies]
macrotest = "1.0"
trybuild = "1.0"
# For doc test
tearup = "0.1"
async-trait = "0.1.57"
tokio = { version = "1.20.1", features = ["rt", "macros"] }